# Andaime

./: .gitignore  LICENSE  THIRD_PARTY_LICENSES  build_portable.sh  launcher.c  pyproject.toml  release_portable.sh  requirements-bap.txt  requirements-emissor.txt  requirements-shared.txt
andaime/: __init__.py  app.py  brasao.py  config.py  database.py  dates.py  db_worker.py  error_handler.py  pdf.py  shutdown.py  text.py  updater.py  widgets.py  win32.py
andaime/qt/: __init__.py  bottom_bar.py  db_runner.py  dev_inspector.py  fs.py  shortcuts.py  status_line.py  table.py  theme.py  theme_model.py  toggle_group.py  top_bar.py
apps/bap/: __init__.py  __main__.py  constants.py  models.py
apps/bap/database/: __init__.py  ss54_database.py
apps/bap/ui_qt/: main_window.py  remessa_sender.py  styles.py
apps/bap/utils/: archive_migrate.py  arquivo_storage.py  bootstrap.py  config.py  date_utils.py  export_to_xlsx.py  gmail_client.py  gmail_scanner.py  import_remessas.py  patient_dedup.py  remessa_email.py  remessa_service.py  text_utils.py
apps/emissor/: __init__.py  __main__.py  main_window.py
apps/emissor/database/: __init__.py  definitive_catalog.py  emissor_db.py  migrations.py  models.py
apps/emissor/pdf/: pdf_config.py  pdf_generator_reportlab.py  pdf_styles.py
apps/emissor/services/: __init__.py  agenda_service.py  dashboard_service.py  exceptions.py  item_sufficiency_service.py  patient_service.py  printer.py  retirada_service.py  scanner_service.py  (+1 more)
apps/rac/: __main__.py
launchers/: bap.cmd  emissor.cmd  rac.cmd  shortcuts.bat  sitecustomize.py
(+76 files in other folders)
