[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "andaime"
version = "0.1.0"
description = "Shared toolkit for PySide6 desktop apps"
requires-python = ">=3.10"
dependencies = ["holidays>=0.40"]

[tool.setuptools.packages.find]
include = ["andaime*"]

[tool.setuptools.package-data]
andaime = ["data/*.json"]
