[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "andaime"
version = "1.0.7"
description = "Shared toolkit for PySide6 desktop apps"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "João Nery" }]
dependencies = ["holidays>=0.40", "PySide6>=6.5"]

[tool.setuptools.packages.find]
include = ["andaime*"]

[tool.setuptools.package-data]
andaime = ["data/*.json"]
